
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct ssl_io_t {int raw; int ssl; int fd; } ;


 int fail (char*) ;
 int fprintf (int ,char*,char*) ;
 int ssl3_write_bytes (int ,unsigned char,unsigned char*,size_t) ;
 int stderr ;
 int write (int ,unsigned char*,size_t) ;

void
rec_write
    (struct ssl_io_t *io, unsigned char *buf, size_t len)
{
  int r;





  if (io->raw & 2) {
    r = write(io->fd, buf, len);
    if (r != len)
      fail("rec_write:write");
  }
  else {
    r = ssl3_write_bytes(io->ssl, buf[0], buf + 5, len - 5);
    if (r < 0) {
      fail("rec_read:ssl3_write_bytes");
    }
    if (buf[0] == 0x14) {
      io->raw |= 2;
    }
  }
}
